add local db ms sql

--- a/Trainer-backend/Trainer-backend/appsettings.json
+++ b/Trainer-backend/Trainer-backend/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseMariaDB": "Host=localhost;Database=Trainer;Port=5432;Username=app;Password=app;"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=trainer;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "PostGreSqlConnection": "Host=localhost;Database=Trainer;Port=5432;Username=app;Password=app;"
   }
 }
